; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ipsec.c_ipsec_clearhist.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ipsec.c_ipsec_clearhist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.ipsec_tag = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipsec_clearhist(%struct.mbuf* %0) #0 {
  %2 = alloca %struct.mbuf*, align 8
  %3 = alloca %struct.ipsec_tag*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %2, align 8
  %4 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %5 = call %struct.ipsec_tag* @ipsec_findaux(%struct.mbuf* %4)
  store %struct.ipsec_tag* %5, %struct.ipsec_tag** %3, align 8
  %6 = load %struct.ipsec_tag*, %struct.ipsec_tag** %3, align 8
  %7 = icmp ne %struct.ipsec_tag* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.ipsec_tag*, %struct.ipsec_tag** %3, align 8
  %10 = getelementptr inbounds %struct.ipsec_tag, %struct.ipsec_tag* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %13 = load %struct.ipsec_tag*, %struct.ipsec_tag** %3, align 8
  %14 = call i32 @ipsec_optaux(%struct.mbuf* %12, %struct.ipsec_tag* %13)
  ret void
}

declare dso_local %struct.ipsec_tag* @ipsec_findaux(%struct.mbuf*) #1

declare dso_local i32 @ipsec_optaux(%struct.mbuf*, %struct.ipsec_tag*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
